tests/golden/cluster-apps-domain/manifests/nginx-oasp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  name: nginx-oasp
spec:
  selector:
    matchLabels:
      k8ify.ref-slug: oasp
      k8ify.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8ify.ref-slug: oasp
        k8ify.service: nginx
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8ify.service
                operator: In
                values:
                - nginx
            topologyKey: kubernetes.io/hostname
      containers:
      - image: docker.io/library/nginx
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 60
        name: nginx-oasp
        ports:
        - containerPort: 80
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 60
      enableServiceLinks: false
      restartPolicy: Always
status: {}
