tests/golden/cluster-apps-domain/manifests/nginx-oasp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    k8ify.ref-slug: oasp
    k8ify.service: nginx
  name: nginx-oasp
spec:
  rules:
  - host: foo.apps.cluster.net
    http:
      paths:
      - backend:
          service:
            name: nginx-oasp
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - {}
status:
  loadBalancer: {}
